# otus-cpp

./: CMakeLists.txt  Doxyfile  HwAllocator.cpp  MyAllocator.cpp  MyContainer.cpp  MySequence.cpp  Sequence.cpp  doxygen_crawl.html  files.html  files_dup.js  globals.html  globals_func.html  graph_legend.html  index.html  ip_printer.cpp  lib.cpp  lib.h  lib_8cpp.html  lib_8cpp.js  lib_8h.html  lib_8h.js  lib_8h_source.html  main.cpp  main_8cpp.html  main_8cpp.js  main_8cpp__incl.map  main_8cpp__incl.md5  main_8h.html  main_8h_source.html  navtreedata.js  navtreeindex0.js  tests.cc
.github/workflows/: release.yml
include/contracts/: IDrawingContext.h  IModel.h  IView.h
include/model/: IDocument.h  IGraphicalObject.h  IShape.h  Point.h
include/system/: ICommand.h  IDisposable.h  IInterface.h  IObservable.h  IObserver.h  ISerializer.h  Traits.h
search/: all_1.js  searchdata.js
src/: ConsoleDrawingContext.cpp  Model.cpp  View.cpp
src/model/: Document.cpp  DocumentSerializer.cpp  Line.cpp  Line.h  Polygon.cpp  Polygon.h  Rect.cpp  Rect.h  ShapeGraphicalObject.h
src/system/: Command.cpp  Disposable.cpp  Observable.cpp  Observer.cpp
